# FilmPicker

./: .gitignore  README.md  alembic.ini  film.db  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 070d49667317_add_user_and_watchlist_tables.py  36687fe4daf8_changed_film_model.py  43e1ed83676a_handle_old_entries_after_schema_change.py  7629556ccaba_clear_application_data.py  a6612e41e273_add_kp_fields_to_film_model.py  adf04038ec54_initial_migration.py  dab677406255_initial_migration.py  db225ccbac78_initial_migration.py
backend/: main.py
backend/db/: crud.py  database.py  models.py
film-picker-src/: docker-compose.yml  film.db  pyproject.toml  test.db
film-picker-src/backend/: database.py  pyproject.toml
film-picker-src/backend/api/: Dockerfile  __init__.py  main.py
film-picker-src/backend/api/routers/: intersection.py  lb_link.py  watchlists.py
film-picker-src/backend/business_logic/: logic.py
film-picker-src/backend/logic/: logic.py  main.py
film-picker-src/backend/parser/: parser.py
film-picker-src/backend/scraper/: Dockerfile
film-picker-src/backend/scraper/scraper/: runner.py
film-picker-src/backend/scraper/scraper/spiders/: watchlist.py
film-picker-src/my_app/app/: config.py  crud.py  db.py  main.py  models.py  schemas.py
film-picker-src/my_app/app/routes/: items.py  scraper.py
film-picker-src/my_app/app/utils/: scraper.py
film-picker-src/my_app/frontend/: index.html
film-picker-src/my_app/tests/: test_scraper.py
frontend/: package-lock.json
my_app/: requirements.txt
tests/: test_scraper.py
(+144 files in other folders)
