[tool.poetry]
name = "film-picker-src"
version = "0.1.0"
description = ""
authors = ["kingmob23 <yaroslav.safonov97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
uvicorn = "^0.30.1"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
