[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["yaroslav.safonov <yaroslav.safonov@latoken.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
scrapy = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
